# AWS_dog_breed_image_classification

./: .dockerignore  .gitignore  Dockerfile  README.md  dataset.dvc  pyproject.toml  requirements.txt
.dvc/: config
src/datamodules/: dogbreed_datamodule.py
