[tool.poetry]
name = "aws_dog_breed_image_classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightning = "2.4.0"
dvc = {extras = ["s3"], version = "^3.56.0"}
rootutils = "1.0.7"
hydra-core = "1.3.2"
timm = "1.0.9"
loguru = "0.7.2"
hydra-colorlog = "1.2.0"
tensorboard = "^2.18.0"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
